apps/whoami/http_route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name:      whoami
  namespace: default

spec:
  parentRefs:
    - name:        traefik-gateway
      namespace:   traefik
      sectionName: web

  hostnames:
    - "whoami.localhost"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: whoami
          port: 80
